# procyos

./: .gdbinit  .gitignore  Cargo.toml  flake.nix
.cargo/: config.toml
formats/miniser/: Cargo.toml
formats/miniser/src/: de_impls.rs  lib.rs  ser_impls.rs  utils.rs
formats/twelf/: Cargo.toml  README.md
formats/twelf/src/: crypto.rs  deserializer.rs  lib.rs  picker.rs  serializer.rs
formats/twelf/src/crypto/: ed25519.rs  slh_dsa.rs
hardware/rng/: readme.md
hardware/rng/csprng/: readme.md
hardware/rng/csprng/uefi/: Cargo.toml
hardware/rng/csprng/uefi/src/: lib.rs
hardware/rng/trng/: readme.md
hardware/rng/trng/rdrand/: Cargo.toml
hardware/rng/trng/rdrand/src/: lib.rs
hardware/rng/trng/rdseed/: Cargo.toml
hardware/rng/trng/rdseed/src/: lib.rs
kernel/: x86_64-kernel-procyos.json
kernel/alloc/buddy/: Cargo.toml
kernel/alloc/buddy/src/: lib.rs
kernel/arch/x86_64/: Cargo.toml  linker.ld
kernel/arch/x86_64/src/: cpu_info.rs  critical_section.rs  lib.rs  paging.rs  rrt.rs
kernel/boot/kldr/: Cargo.toml  build.rs
kernel/boot/kldr/src/: bump_alloc.rs  gop_info.rs  main.rs
kernel/boot/kldr/src/elf_loader/: mod.rs
kernel/boot/kldr/src/elf_loader/sys/: x86_64.rs
kernel/boot/uefi/uefi-rand/: Cargo.toml
kernel/boot/uefi/uefi-rand/src/: lib.rs
kernel/main/: Cargo.toml
kernel/main/src/: main.rs
kernel/proto/startup-info/: Cargo.toml
kernel/proto/startup-info/src/: lib.rs
services/rngseed/core/: Cargo.toml
services/rngseed/core/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
