[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = 2
split-debuginfo = "packed"
#strip = true

#[profile.dev.package."*"]
#opt-level = 3

[profile.dev]
split-debuginfo = "packed"
#strip = true

[workspace]
members = [
    "formats/miniser",
    "formats/twelf",
    "kernel/alloc/buddy",
    "kernel/arch/x86_64",
    "kernel/boot/kldr",
    "kernel/boot/uefi/uefi-rand",
    "kernel/main",
    "kernel/proto/startup-info",
    "xtask",
]
resolver = "2"
