[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = 2
split-debuginfo = "packed"
#strip = true

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
split-debuginfo = "packed"
#strip = true

[workspace]
members = [
    "formats/miniser",
    "formats/twelf",
    "hardware/rng/trng/rdrand",
    "hardware/rng/trng/rdseed",
    "hardware/rng/csprng/uefi",
    "kernel/alloc/buddy",
    "kernel/arch/x86_64",
    "kernel/boot/kldr",
    "kernel/main",
    "kernel/proto/startup-info",
    "xtask", "services/rngseed/core",
]
resolver = "2"

[patch.crates-io]
pasetors = { git = "https://github.com/DarkKirb/pasetors" }
