[package]
name = "twelf"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = { version = "1.5.3", default-features = false, features = ["pure"] }
constant_time_eq = "0.3.0"
ed25519-dalek = { git = "https://github.com/DarkKirb/curve25519-dalek", default-features = false, features = [
    "alloc",
    "rand_core",
    "zeroize",
] }
fallible_collections = { version = "0.4.9", features = [
    "unstable",
], default-features = false, optional = true }
log = "0.4.22"
phf = { version = "0.11.2", default-features = false }
phf_shared = { version = "0.11.2", default-features = false }
rand_core = { version = "0.6.4", default-features = false, features = [
    "alloc",
] }
sha2 = { version = "0.10.8", default-features = false, features = [
    "force-soft",
] }
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }

[target.'cfg(target_arch = "x86_64")'.dependencies]
raw-cpuid = { version = "11.1.0", optional = true, default-features = false }

[features]
alloc = ["fallible_collections"]
fallible_collections = ["dep:fallible_collections"]
picker = ["raw-cpuid"]

[lints.clippy]
pedantic = "warn"
nursery = "warn"
module-name-repetitions = "allow"
