[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[target.'cfg(target_arch = "x86_64")'.dependencies]
kernel_arch_x86_64 = { version = "0.1.0", path = "../arch/x86_64", features = [
    "runtime",
] }
buddy = { version = "0.1.0", path = "../alloc/buddy" }

[dependencies]

embedded-alloc = "0.5.1"
log = "0.4.22"
miniser = { version = "0.1.0", path = "../../formats/miniser" }
spin = "0.9.8"
startup-info = { version = "0.1.0", path = "../proto/startup-info" }
uart_16550 = { version = "0.3.1", features = ["nightly"] }

[features]
std = []
[lints.clippy]
pedantic = "warn"
nursery = "warn"
module-name-repetitions = "allow"
