[package]
name = "kernel_arch_x86_64"
version = "0.1.0"
edition = "2021"

[dependencies]
bitfield-struct = "0.8.0"
log = "0.4.22"
raw-cpuid = "11.1.0"
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }

[target.'cfg(target_arch = "x86_64")'.dependencies]
critical-section = { version = "1.1.2", features = [
    "restore-state-u8",
], optional = true }

[features]
runtime = ["critical-section"]
critical-section = ["dep:critical-section"]


[lints.clippy]
pedantic = "warn"
nursery = "warn"
module-name-repetitions = "allow"
