[package]
name = "uefi-rand"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
rand_chacha = { version = "0.3.1", default-features = false }
rand_core = "0.6.4"
uefi = "0.30.0"

[target.'cfg(target_arch = "x86_64")'.dependencies]
raw-cpuid = { version = "11.1.0", default-features = false }

[lints.clippy]
pedantic = "warn"
nursery = "warn"
module-name-repetitions = "allow"
